--- a/config/android/library.gradle
+++ b/config/android/library.gradle
@@ -29,18 +29,18 @@ android {
     // See http://tools.android.com/tech-docs/new-build-system/2-5-alpha-gradle-plugin/trying-gradle-plugin-2-5#TOC-Variant-Aware-Dependency-Management
     // publishNonDefault true
 
-    compileSdkVersion rootProject.ext.androidCompileSdkVersion
-    buildToolsVersion rootProject.ext.androidBuildToolsVersion
+    compileSdkVersion rootProject.ext.versions.build.android.compileSdk
+    buildToolsVersion rootProject.ext.versions.build.android.tools
 
     defaultConfig {
-        minSdkVersion rootProject.ext.androidMinSdkVersion
-        targetSdkVersion rootProject.ext.androidTargetSdkVersion
+        minSdkVersion rootProject.ext.versions.build.android.minSdk
+        targetSdkVersion rootProject.ext.versions.build.android.targetSdk
         consumerProguardFiles 'proguard-rules.pro'
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility rootProject.ext.versions.build.java.targetCompatibility
+        sourceCompatibility rootProject.ext.versions.build.java.sourceCompatibility
     }
 
     packagingOptions {
