--- a/presentation-android-mvvm/build.gradle
+++ b/presentation-android-mvvm/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply from: "$rootDir/config/android/application.gradle"
+apply from: "$rootDir/config/dependencies/presentation_android_mvvm.gradle"
 
 android {
     defaultConfig {
@@ -22,14 +23,4 @@ android {
         versionCode 1
         versionName '1.0.0'
     }
-}
-
-dependencies {
-    def presentationAndroidDebugDependencies = rootProject.ext.presentationAndroidDebugDependencies
-
-    compile project(':presentation-android')
-
-    // FIXME (GRADLE LIBRARY) - Move to presentation-android dependencies once library projects support
-    // publishing all library variants (not just release). See config/android/library.gradle
-    debugCompile presentationAndroidDebugDependencies.leakCanary
 }
