--- a/presentation-android/build.gradle
+++ b/presentation-android/build.gradle
@@ -15,51 +15,11 @@
  */
 
 apply from: "$rootDir/config/android/library.gradle"
+apply from: "$rootDir/config/dependencies/presentation_android.gradle"
 
 android {
     defaultConfig {
         versionCode 1
         versionName '1.0.0'
-    }
-}
-
-dependencies {
-    def presentationAndroidDependencies = rootProject.ext.presentationAndroidDependencies
-    def presentationAndroidTestDependencies = rootProject.ext.presentationAndroidTestDependencies
-
-    annotationProcessor presentationAndroidDependencies.daggerCompiler
-    annotationProcessor presentationAndroidDependencies.daggerAndroidProcessor
-    annotationProcessor presentationAndroidDependencies.autoValue
-    annotationProcessor presentationAndroidDependencies.butterKnifeAnnotationProcessor
-
-    // FIXME (GRADLE DEPENDENCY) - Update to api, implementation, compileOnly, and runtimeOnly configurations
-    // These are the same configurations provided by the java-library plugin starting at Gradle 3.4
-    // See http://tools.android.com/tech-docs/new-build-system/2-5-alpha-gradle-plugin/trying-gradle-plugin-2-5#TOC-New-dependency-configurations
-
-    compile project(':presentation-java')
-
-    compile presentationAndroidDependencies.rxJava
-    compile presentationAndroidDependencies.rxAndroid
-    compile presentationAndroidDependencies.dagger
-    compile presentationAndroidDependencies.daggerAndroid
-    compile presentationAndroidDependencies.appCompat
-    compile presentationAndroidDependencies.recyclerView
-    compile presentationAndroidDependencies.butterKnife
-
-    provided presentationAndroidDependencies.javaxAnnotation
-    provided presentationAndroidDependencies.autoValue
-
-    testCompile project(path: ':presentation-java', configuration: 'testOutput')
-    testCompile presentationAndroidTestDependencies.junit
-    testCompile presentationAndroidTestDependencies.assertj
-    testCompile presentationAndroidTestDependencies.mockitoCore
-
-    androidTestCompile presentationAndroidTestDependencies.mockitoCore
-    androidTestCompile presentationAndroidTestDependencies.mockitoAndroid
-    androidTestCompile(presentationAndroidTestDependencies.espressoCore) {
-        exclude group: 'com.android.support'
-    }
-    androidTestCompile(presentationAndroidTestDependencies.espressoRunner) {
-        exclude group: 'com.android.support'
     }
 }
