Added business image placeholder using Fresco

--- a/config/dependencies/presentation-android.gradle
+++ b/config/dependencies/presentation-android.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile presentationAndroidDependencies.recyclerView
     compile presentationAndroidDependencies.supportCompat
     compile presentationAndroidDependencies.butterKnife
+    compile presentationAndroidDependencies.fresco
 
     provided presentationAndroidDependencies.javaxAnnotation
     provided presentationAndroidDependencies.autoValue
