--- a/config/dependencies/all-projects.gradle
+++ b/config/dependencies/all-projects.gradle
@@ -54,6 +54,7 @@ ext {
             rxAndroid      : '2.0.1',
             butterKnife    : '8.5.1',
             androidSupport : '25.3.1',
+            fresco         : '1.3.0',
 
             // Java Testing
             jUnit          : '4.12',
@@ -90,7 +91,8 @@ ext {
             recyclerView                  : "com.android.support:recyclerview-v7:${versions.androidSupport}",
             supportCompat                 : "com.android.support:support-compat:${versions.androidSupport}",
             butterKnife                   : "com.jakewharton:butterknife:${versions.butterKnife}",
-            butterKnifeAnnotationProcessor: "com.jakewharton:butterknife-compiler:${versions.butterKnife}"
+            butterKnifeAnnotationProcessor: "com.jakewharton:butterknife-compiler:${versions.butterKnife}",
+            fresco                        : "com.facebook.fresco:fresco:${versions.fresco}"
     ]
 
     androidTestDependencies = javaTestDependencies + [
