--- a/presentation-android-mvp/src/main/AndroidManifest.xml
+++ b/presentation-android-mvp/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.business.search.BusinessSearchActivity">
+        <activity android:name=".ui.business.search.BusinessSearchActivity"
+            android:label="@string/search_for_businesses">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
