Removed Business attribute is_closed due to incorrect usage and added common module

--- a/config/dependencies/all-projects.gradle
+++ b/config/dependencies/all-projects.gradle
@@ -101,6 +101,10 @@ ext {
             espressoRunner: "com.android.support.test:runner:${versions.espressoRunner}"
     ]
 
+    commonDependencies = javaDependencies
+
+    commonTestDependencies = javaTestDependencies
+
     domainDependencies = javaDependencies
 
     domainTestDependencies = javaTestDependencies
