--- a/config/dependencies/presentation-android.gradle
+++ b/config/dependencies/presentation-android.gradle
@@ -31,6 +31,7 @@ dependencies {
     // These are the same configurations provided by the java-library plugin starting at Gradle 3.4
     // See http://tools.android.com/tech-docs/new-build-system/2-5-alpha-gradle-plugin/trying-gradle-plugin-2-5#TOC-New-dependency-configurations
 
+    compile project(':common')
     compile project(':presentation-java')
 
     compile presentationAndroidDependencies.rxJava
