--- a/config/dependencies/presentation-java.gradle
+++ b/config/dependencies/presentation-java.gradle
@@ -25,6 +25,7 @@ dependencies {
     apt presentationJavaDependencies.daggerCompiler
     apt presentationJavaDependencies.autoValue
 
+    api project(':common')
     api project(':domain')
     api project(':data')
 
