--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,31 +14,5 @@
  * limitations under the License.
  */
 
-package com.vestrel00.business.search.data.util;
-
-import javax.inject.Inject;
-import javax.inject.Singleton;
-
-/**
- * Provides utility methods for Strings.
- */
-@Singleton
-public final class StringUtils {
-
-    @Inject
-    StringUtils() {
-    }
-
-    public boolean isEmpty(String string) {
-        return string == null || string.isEmpty();
-    }
-
-    public boolean allEmpty(String... strings) {
-        for (String string : strings) {
-            if (!isEmpty(string)) {
-                return false;
-            }
-        }
-        return true;
-    }
-}
+apply from: "$rootDir/config/java/library.gradle"
+apply from: "$rootDir/config/dependencies/common.gradle"
