--- a/config/dependencies/data.gradle
+++ b/config/dependencies/data.gradle
@@ -30,7 +30,9 @@ dependencies {
     // E.G. DataServiceFactory includes okhttp3 and retrofit2 symbols in compiled class file.
     api dataDependencies.retrofit
 
+    implementation project(':common')
     implementation project(':domain')
+
     implementation dataDependencies.rxJava
     implementation dataDependencies.dagger
     implementation dataDependencies.retrofitRxJavaAdapter
