--- a/config/dependencies/all-projects.gradle
+++ b/config/dependencies/all-projects.gradle
@@ -29,7 +29,7 @@ ext {
 
     versions = [
             // Build
-            build          : [
+            build             : [
                     java   : [
                             targetCompatibility: '1.8',
                             sourceCompatibility: '1.8'
@@ -43,31 +43,32 @@ ext {
             ],
 
             // Java Libraries
-            rxJava         : '2.0.8',
-            javaxAnnotation: '1.0',
-            dagger         : '2.11-rc2',
-            autoValue      : '1.4.1',
-            retrofit       : '2.2.0',
-            jackson        : '2.8.8',
+            rxJava            : '2.0.8',
+            javaxAnnotation   : '1.0',
+            dagger            : '2.11-rc2',
+            autoValue         : '1.4.1',
+            retrofit          : '2.2.0',
+            jackson           : '2.8.8',
 
             // Android Libraries
-            rxAndroid      : '2.0.1',
-            butterKnife    : '8.5.1',
-            androidSupport : '25.3.1',
-            fresco         : '1.3.0',
+            rxAndroid         : '2.0.1',
+            butterKnife       : '8.5.1',
+            androidSupport    : '25.3.1',
+            viewPagerIndicator: '2.4.1.1',
+            fresco            : '1.3.0',
 
             // Java Testing
-            jUnit          : '4.12',
-            assertJ        : '2.6.0',
-            mockito        : '2.7.21',
+            jUnit             : '4.12',
+            assertJ           : '2.6.0',
+            mockito           : '2.7.21',
 
             // Android Testing
-            robolectric    : '3.3.2',
-            espressoCore   : '2.2.2',
-            espressoRunner : '0.5',
+            robolectric       : '3.3.2',
+            espressoCore      : '2.2.2',
+            espressoRunner    : '0.5',
 
             // Android Development (Debug Only)
-            leakCanary     : '1.5'
+            leakCanary        : '1.5'
     ]
 
     javaDependencies = [
@@ -87,11 +88,16 @@ ext {
     androidDependencies = javaDependencies + [
             daggerAndroid                 : "com.google.dagger:dagger-android:${versions.dagger}",
             daggerAndroidProcessor        : "com.google.dagger:dagger-android-processor:${versions.dagger}",
+            butterKnife                   : "com.jakewharton:butterknife:${versions.butterKnife}",
+            butterKnifeAnnotationProcessor: "com.jakewharton:butterknife-compiler:${versions.butterKnife}",
             rxAndroid                     : "io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}",
             recyclerView                  : "com.android.support:recyclerview-v7:${versions.androidSupport}",
             supportCompat                 : "com.android.support:support-compat:${versions.androidSupport}",
-            butterKnife                   : "com.jakewharton:butterknife:${versions.butterKnife}",
-            butterKnifeAnnotationProcessor: "com.jakewharton:butterknife-compiler:${versions.butterKnife}",
+            coreUi                        : "com.android.support:support-core-ui:${versions.androidSupport}",
+            // Using gradle compatible version of original viewpager indicator lib
+            // See http://stackoverflow.com/questions/21130003/using-viewpagerindicator-library-with-android-studio-and-gradle
+            // FIXME? (DEPENDENCY) - use more recent library? This library is 5 years old and contains a lot of deprecated code
+            viewPagerIndicator            : "fr.avianey.com.viewpagerindicator:library:${versions.viewPagerIndicator}@aar",
             fresco                        : "com.facebook.fresco:fresco:${versions.fresco}"
     ]
 
