--- a/presentation-android-mvp/src/main/AndroidManifest.xml
+++ b/presentation-android-mvp/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:name=".AndroidApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.Material">
 
         <activity android:name=".ui.business.search.BusinessSearchActivity">
             <intent-filter>
