Added layout additions for business details

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@
 buildscript {
     ext {
         androidGradlePluginVersion = '2.3.1'
+        butterKnifeVersion = '8.6.0'
         javaAptPluginVersion = '0.10'
         retrolambdaPluginVersion = '3.6.0'
     }
@@ -34,16 +35,19 @@ buildscript {
         // Note that annotation processors (apt) are now included in the Android gradle plugin
         // starting with v2.2 (usage is annotationProcessor). This deprecates the custom android-apt
         // annotation processor: https://bitbucket.org/hvisser/android-apt/wiki/Migration
-        classpath "com.android.tools.build:gradle:$androidGradlePluginVersion"
+        classpath "com.android.tools.build:gradle:${androidGradlePluginVersion}"
+
+        // Butterknife support for android library projects
+        classpath "com.jakewharton:butterknife-gradle-plugin:${butterKnifeVersion}"
 
         // Apt for Java: https://plugins.gradle.org/plugin/net.ltgt.apt
-        classpath "net.ltgt.gradle:gradle-apt-plugin:$javaAptPluginVersion"
+        classpath "net.ltgt.gradle:gradle-apt-plugin:${javaAptPluginVersion}"
 
         // FIXME (LAMBDA) - Migrate to using Android Studio 2.4 support for lambdas
         // (and other Java 8 features)
         // This will require classpath com.android.tools.build:gradle: to 2.4.x
         // See https://developer.android.com/studio/preview/features/java8-support.html
-        classpath "me.tatarka:gradle-retrolambda:$retrolambdaPluginVersion"
+        classpath "me.tatarka:gradle-retrolambda:${retrolambdaPluginVersion}"
     }
 }
 
