--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include ':presentation-java-swing-mvvm'
 include ':presentation-android'
 include ':presentation-android-mvp'
 include ':presentation-android-mvvm'
+include ':presentation-android-kotlin-mvp'
